{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 98,
  "lineage": "945b3d04-1f1c-392f-8c9b-4aa41accfacf",
  "resources": [
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "networkinterface",
      "provider": "module.linuxservers.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/networkInterfaces/NIC0",
            "internal_domain_name_suffix": "xoi0ypvb4f5ufordkfkqhgfndh.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "interne",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/IP0",
                "subnet_id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/net1/subnets/subnet1"
              }
            ],
            "location": "australiaeast",
            "name": "NIC0",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "terraform"
          },
          "dependencies": [
            "module.linuxservers.azurerm_public_ip.publicip",
            "module.linuxservers.azurerm_resource_group.terraform",
            "module.linuxservers.azurerm_subnet.subnet1",
            "module.linuxservers.azurerm_virtual_network.net1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/networkInterfaces/NIC1",
            "internal_domain_name_suffix": "xoi0ypvb4f5ufordkfkqhgfndh.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "interne",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/IP1",
                "subnet_id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/net1/subnets/subnet1"
              }
            ],
            "location": "australiaeast",
            "name": "NIC1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "terraform"
          },
          "dependencies": [
            "module.linuxservers.azurerm_public_ip.publicip",
            "module.linuxservers.azurerm_resource_group.terraform",
            "module.linuxservers.azurerm_subnet.subnet1",
            "module.linuxservers.azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "linux-vm-nsg",
      "provider": "module.linuxservers.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/networkSecurityGroups/linux-vm-nsg",
            "location": "australiaeast",
            "name": "linux-vm-nsg",
            "resource_group_name": "terraform",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linuxservers.azurerm_resource_group.terraform",
            "module.linuxservers.azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "module.linuxservers.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow HTTP",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/networkSecurityGroups/linux-vm-nsg/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "linux-vm-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraform",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linuxservers.azurerm_network_security_group.linux-vm-nsg",
            "module.linuxservers.azurerm_resource_group.terraform",
            "module.linuxservers.azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "module.linuxservers.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow SSH",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/networkSecurityGroups/linux-vm-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "linux-vm-nsg",
            "priority": 150,
            "protocol": "Tcp",
            "resource_group_name": "terraform",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linuxservers.azurerm_network_security_group.linux-vm-nsg",
            "module.linuxservers.azurerm_resource_group.terraform",
            "module.linuxservers.azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "module.linuxservers.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/IP0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.213.93.160",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "IP0",
            "resource_group_name": "terraform",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.linuxservers.azurerm_resource_group.terraform",
            "module.linuxservers.azurerm_subnet.subnet1",
            "module.linuxservers.azurerm_virtual_network.net1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/IP1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.92.245.240",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "IP1",
            "resource_group_name": "terraform",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.linuxservers.azurerm_resource_group.terraform",
            "module.linuxservers.azurerm_subnet.subnet1",
            "module.linuxservers.azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "module.linuxservers.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/net1/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "terraform",
            "virtual_network_name": "net1"
          },
          "dependencies": [
            "module.linuxservers.azurerm_resource_group.terraform",
            "module.linuxservers.azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "linux-vm-nsg-association",
      "provider": "module.linuxservers.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/net1/subnets/subnet1",
            "network_security_group_id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/networkSecurityGroups/linux-vm-nsg",
            "subnet_id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/net1/subnets/subnet1"
          },
          "dependencies": [
            "module.linuxservers.azurerm_network_security_group.linux-vm-nsg",
            "module.linuxservers.azurerm_resource_group.terraform",
            "module.linuxservers.azurerm_subnet.subnet1",
            "module.linuxservers.azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "net1",
      "provider": "module.linuxservers.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3eac91bb-f1a1-427f-ba23-51550398ad1f",
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/net1",
            "location": "australiaeast",
            "name": "net1",
            "resource_group_name": "terraform",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.linuxservers.azurerm_resource_group.terraform"
          ]
        }
      ]
    }
  ]
}